optimizer/src/snapshots/spec_should_handle_dangerously_set_inner_html.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from "@qwik.dev/core";
const Cmp = component$(() => {
	const htmlSignal = useSignal("<h2><span>I'm a signal value!</span></h2>");
	return (
		<div>
			<div>
				<span id="first" dangerouslySetInnerHTML="vanilla HTML here" />
			</div>
			<div>
				<span id="second" dangerouslySetInnerHTML="<h1>I'm an h1!</h1>" class="after" />
			</div>
			<div>
				<span id="third" dangerouslySetInnerHTML={htmlSignal.value} class="after" />
				<button
					onClick$={() =>
						(htmlSignal.value = "<h2><span>I'm a updated signal value!</span></h2>")
					}
				></button>
			</div>
		</div>
	);
});

============================= test.tsx_Cmp_component_div_div_button_onClick_3Ra5dio0eSA.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const Cmp_component_div_div_button_onClick_3Ra5dio0eSA = ()=>{
	const [htmlSignal] = useLexicalScope();
	return htmlSignal.value = "<h2><span>I'm a updated signal value!</span></h2>";
};


None
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_div_div_button_onClick_3Ra5dio0eSA",
  "entry": null,
  "displayName": "test.tsx_Cmp_component_div_div_button_onClick",
  "hash": "3Ra5dio0eSA",
  "canonicalFilename": "test.tsx_Cmp_component_div_div_button_onClick_3Ra5dio0eSA",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Cmp_component_4ryKJTOKjWE.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_3Ra5dio0eSA = ()=>import("./test.tsx_Cmp_component_div_div_button_onClick_3Ra5dio0eSA");
export const Cmp_component_4ryKJTOKjWE = ()=>{
	const htmlSignal = useSignal("<h2><span>I'm a signal value!</span></h2>");
	return /*#__PURE__*/ _jsxSorted("div", null, null, [
		/*#__PURE__*/ _jsxSorted("div", null, null, /*#__PURE__*/ _jsxSorted("span", null, {
			id: "first",
			dangerouslySetInnerHTML: "vanilla HTML here"
		}, null, 3, null), 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, /*#__PURE__*/ _jsxSorted("span", null, {
			id: "second",
			dangerouslySetInnerHTML: "<h1>I'm an h1!</h1>",
			class: "after"
		}, null, 3, null), 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, [/*#__PURE__*/ _jsxSorted("span", { dangerouslySetInnerHTML: _wrapProp(htmlSignal) }, {
			id: "third",
			class: "after"
		}, null, 3, null), /*#__PURE__*/ _jsxSorted("button", { "on:click": /*#__PURE__*/ qrl(i_3Ra5dio0eSA, "Cmp_component_div_div_button_onClick_3Ra5dio0eSA", [htmlSignal]) }, null, null, 3, null)], 3, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_4ryKJTOKjWE",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "4ryKJTOKjWE",
  "canonicalFilename": "test.tsx_Cmp_component_4ryKJTOKjWE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    68,
    609
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_4ryKJTOKjWE = ()=>import("./test.tsx_Cmp_component_4ryKJTOKjWE");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_4ryKJTOKjWE, "Cmp_component_4ryKJTOKjWE"));


None
== DIAGNOSTICS ==

[]
