optimizer/src/snapshots/spec_should_ignore_null_inlined_qrl.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { inlinedQrl } from '@qwik.dev/core';

const foo = inlinedQrl(null, 'some_hash');

============================= test.js ==

import { inlinedQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
inlinedQrl(null, "some_hash");


None
== DIAGNOSTICS ==

[]
