optimizer/src/snapshots/spec_should_merge_bind_value_and_on_input.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
  const localValue = useSignal("");

  return (
    <input
      onInput$={() => {
        console.log("test");
      }}
      bind:value={localValue}
    />
  );
});

============================= test.tsx_FieldInput_component_input_on_input_KMRAAEMkFCE.js (ENTRY POINT)==

export const FieldInput_component_input_on_input_KMRAAEMkFCE = ()=>{
	console.log("test");
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_on_input_KMRAAEMkFCE",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_on_input",
  "hash": "KMRAAEMkFCE",
  "canonicalFilename": "test.tsx_FieldInput_component_input_on_input_KMRAAEMkFCE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onInput$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_FieldInput_component_V4XAtJSTRKg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_KMRAAEMkFCE = ()=>import("./test.tsx_FieldInput_component_input_on_input_KMRAAEMkFCE");
export const FieldInput_component_V4XAtJSTRKg = ()=>{
	const localValue = useSignal("");
	return /*#__PURE__*/ _jsxSorted("input", { "on:input": /*#__PURE__*/ qrl(i_KMRAAEMkFCE, "FieldInput_component_input_on_input_KMRAAEMkFCE") }, {
		value: localValue,
		"on:input": inlinedQrl(_val, "_val", [localValue])
	}, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_V4XAtJSTRKg",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "V4XAtJSTRKg",
  "canonicalFilename": "test.tsx_FieldInput_component_V4XAtJSTRKg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    94,
    266
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_V4XAtJSTRKg = ()=>import("./test.tsx_FieldInput_component_V4XAtJSTRKg");
export const FieldInput = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_V4XAtJSTRKg, "FieldInput_component_V4XAtJSTRKg"));


None
== DIAGNOSTICS ==

[]
