optimizer/src/snapshots/spec_should_merge_on_input_and_bind_checked.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
  const localValue = useSignal(false);

  return (
    <input
      bind:checked={localValue}
      onInput$={() => {
        console.log("test");
      }}
    />
  );
});

============================= test.tsx_FieldInput_component_input_onInput_zBzGtdHkCmE.js (ENTRY POINT)==

export const FieldInput_component_input_onInput_zBzGtdHkCmE = ()=>{
	console.log("test");
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_onInput_zBzGtdHkCmE",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_onInput",
  "hash": "zBzGtdHkCmE",
  "canonicalFilename": "test.tsx_FieldInput_component_input_onInput_zBzGtdHkCmE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onInput$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_FieldInput_component_V4XAtJSTRKg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_zBzGtdHkCmE = ()=>import("./test.tsx_FieldInput_component_input_onInput_zBzGtdHkCmE");
export const FieldInput_component_V4XAtJSTRKg = ()=>{
	const localValue = useSignal(false);
	return /*#__PURE__*/ _jsxSorted("input", { "on:input": /*#__PURE__*/ qrl(i_zBzGtdHkCmE, "FieldInput_component_input_onInput_zBzGtdHkCmE") }, {
		checked: localValue,
		"on:input": inlinedQrl(_chk, "_chk", [localValue])
	}, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_V4XAtJSTRKg",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "V4XAtJSTRKg",
  "canonicalFilename": "test.tsx_FieldInput_component_V4XAtJSTRKg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    94,
    271
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_V4XAtJSTRKg = ()=>import("./test.tsx_FieldInput_component_V4XAtJSTRKg");
export const FieldInput = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_V4XAtJSTRKg, "FieldInput_component_V4XAtJSTRKg"));


None
== DIAGNOSTICS ==

[]
