optimizer/src/snapshots/spec_should_move_bind_value_to_var_props.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from "@qwik.dev/core";
import { destructureBindings } from "./destructure-bindings";

export const FieldInput = component$(
  (props) => {
    const initialValues = { value: undefined as string | undefined };
    const rest = destructureBindings(props, initialValues);

    return (
      <input
        {...rest}
        bind:value={finalValue}
		onClick$={() => {
			console.log('clicked');
		}}
      />
    );
  }
);

============================= test.tsx_FieldInput_component_V4XAtJSTRKg.js (ENTRY POINT)==

import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { destructureBindings } from "./destructure-bindings";
import { qrl } from "@qwik.dev/core";
const i_ZU6atl1InN8 = ()=>import("./test.tsx_FieldInput_component_input_onClick_ZU6atl1InN8");
export const FieldInput_component_V4XAtJSTRKg = (props)=>{
	const initialValues = { value: undefined };
	const rest = destructureBindings(props, initialValues);
	return /*#__PURE__*/ _jsxSplit("input", {
		..._getVarProps(rest),
		"on:click": /*#__PURE__*/ qrl(i_ZU6atl1InN8, "FieldInput_component_input_onClick_ZU6atl1InN8")
	}, _getConstProps(rest), null, 0, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_V4XAtJSTRKg",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "V4XAtJSTRKg",
  "canonicalFilename": "test.tsx_FieldInput_component_V4XAtJSTRKg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    162,
    453
  ]
}
*/
============================= test.tsx_FieldInput_component_input_onClick_ZU6atl1InN8.js (ENTRY POINT)==

export const FieldInput_component_input_onClick_ZU6atl1InN8 = ()=>{
	console.log("clicked");
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_onClick_ZU6atl1InN8",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_onClick",
  "hash": "ZU6atl1InN8",
  "canonicalFilename": "test.tsx_FieldInput_component_input_onClick_ZU6atl1InN8",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_V4XAtJSTRKg = ()=>import("./test.tsx_FieldInput_component_V4XAtJSTRKg");
export const FieldInput = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_V4XAtJSTRKg, "FieldInput_component_V4XAtJSTRKg"));


None
== DIAGNOSTICS ==

[]
