optimizer/src/snapshots/spec_should_not_generate_conflicting_props_identifiers.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useComputed$, useTask$ } from '@qwik.dev/core'

export default component$(({ color, ...props }) => {
useComputed$(() => color)

useTask$(() => {
	props.checked
})

return 'hi'
})

============================= test.js ==

import { useTaskQrl } from "@qwik.dev/core";
import { useComputedQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { _restProps } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useComputedQrl } from "@qwik.dev/core";
import { useTaskQrl } from "@qwik.dev/core";
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl((_rawProps)=>{
	const props = _restProps(_rawProps, ["color"]);
	/*#__PURE__*/ useComputedQrl(/*#__PURE__*/ inlinedQrl(()=>color, "test_component_useComputed_PYU291PvidQ"));
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ inlinedQrl(()=>{
		props.checked;
	}, "test_component_useTask_jewzFYh3XmQ"));
	return "hi";
}, "test_component_LUXeXe0DQrg"));


None
== DIAGNOSTICS ==

[]
