optimizer/src/snapshots/spec_should_not_transform_events_on_non_elements.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, $ } from '@qwik.dev/core';
import { CustomComponent } from './custom-component';
import { AnotherComponent } from './another-component';

export const Greeter = component$(() => {
	return (
		<div>
			<CustomComponent onClick$={() => {}}/>
			{array.map(item => (
				<AnotherComponent onClick$={() => {}}/>
			))}
		</div>
	)
});

============================= test.tsx_Greeter_component_div_CustomComponent_on_click_JOEiKoqcOwE.tsx (ENTRY POINT)==

export const Greeter_component_div_CustomComponent_on_click_JOEiKoqcOwE = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_CustomComponent_on_click_JOEiKoqcOwE",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_CustomComponent_on_click",
  "hash": "JOEiKoqcOwE",
  "canonicalFilename": "test.tsx_Greeter_component_div_CustomComponent_on_click_JOEiKoqcOwE",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Greeter_component_div_AnotherComponent_on_click_G9biBAxcdm4.tsx (ENTRY POINT)==

export const Greeter_component_div_AnotherComponent_on_click_G9biBAxcdm4 = ()=>{};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_div_AnotherComponent_on_click_G9biBAxcdm4",
  "entry": null,
  "displayName": "test.tsx_Greeter_component_div_AnotherComponent_on_click",
  "hash": "G9biBAxcdm4",
  "canonicalFilename": "test.tsx_Greeter_component_div_AnotherComponent_on_click_G9biBAxcdm4",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_Greeter_component_n7HuG2hhU0Q.tsx (ENTRY POINT)==

import { AnotherComponent } from "./another-component";
import { CustomComponent } from "./custom-component";
import { qrl } from "@qwik.dev/core";
const i_G9biBAxcdm4 = ()=>import("./test.tsx_Greeter_component_div_AnotherComponent_on_click_G9biBAxcdm4");
const i_JOEiKoqcOwE = ()=>import("./test.tsx_Greeter_component_div_CustomComponent_on_click_JOEiKoqcOwE");
export const Greeter_component_n7HuG2hhU0Q = ()=>{
	return <div>
			<CustomComponent onClick$={/*#__PURE__*/ qrl(i_JOEiKoqcOwE, "Greeter_component_div_CustomComponent_on_click_JOEiKoqcOwE")} />
			{array.map((item)=><AnotherComponent onClick$={/*#__PURE__*/ qrl(i_G9biBAxcdm4, "Greeter_component_div_AnotherComponent_on_click_G9biBAxcdm4")} />)}
		</div>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "Greeter_component_n7HuG2hhU0Q",
  "entry": null,
  "displayName": "test.tsx_Greeter_component",
  "hash": "n7HuG2hhU0Q",
  "canonicalFilename": "test.tsx_Greeter_component_n7HuG2hhU0Q",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    193,
    349
  ]
}
*/
============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_n7HuG2hhU0Q = ()=>import("./test.tsx_Greeter_component_n7HuG2hhU0Q");
export const Greeter = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_n7HuG2hhU0Q, "Greeter_component_n7HuG2hhU0Q"));


None
== DIAGNOSTICS ==

[]
